@@ -4,17 +4,15 @@ import org.hsse.news.api.schemas.response.article.ArticleResponse;
 import org.hsse.news.database.article.models.Article;
 import org.hsse.news.database.topic.TopicService;
 import org.hsse.news.database.website.WebsiteService;
-import org.hsse.news.database.website.models.WebsiteId;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public final class ArticleCastUtil {
     private final TopicService topicService;
     private final WebsiteService websiteService;
 
-    public ArticleCastUtil(TopicService topicService, WebsiteService websiteService) {
+    public ArticleCastUtil(final TopicService topicService, final WebsiteService websiteService) {
         this.topicService = topicService;
         this.websiteService = websiteService;
     }
@@ -24,8 +22,8 @@ public final class ArticleCastUtil {
                 article.title(),
                 article.url(),
                 String.valueOf(article.createdAt()),
-                new ArrayList<>(Arrays.asList(topicService.getTopicNameById(article.topicId()))), // NOPMD
-                websiteService.getDescriptionById(article.websiteId()) // NOPMD
+                new ArrayList<>(List.of(topicService.getTopicNameById(article.topicId()))), // NOPMD
+                websiteService.findById(article.websiteId()).get().description() // NOPMD
         );
     }
 }
